# perception_vision_apprentissage_tp_01

./: .env  .env.example  .gitignore  Makefile  README.md  compare_models.py  draw_networks.sh  eval.py  main.py  predict.py  pyproject.toml  rapport.md  train.py
PlotNeuralNet/: __init__.py
model/: config.py  network.py
output/: test_data.csv  training_data.csv  val_data.csv
rapport/: rapport.tex
src/: config.py  dataset.py  network.py
src/arguments/: handle_args.py
src/draw_network/: draw_networks.sh
src/draw_network/archs/: draw_deeper_detector.py  draw_resnet_detector.py  draw_resnet_unfrozen_detector.py  draw_simple_detector.py  draw_vgg_inspired_detector.py
src/draw_network/archs_creation/: create_files.py
src/draw_network/network_diagrams/latex_files/: draw_deeper_detector.tex  draw_resnet_detector.tex  draw_simple_detector.tex  draw_vgg_inspired_detector.tex
src/open_cv/: object_detector_cv.py
src/timer/: timer.py
