[project]
name = "01-intro-to-neural-nets"
version = "0.1.0"
description = "Training model for image detection and recognition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "opencv-python>=4.12.0.88",
    "pyqt5>=5.15.11",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
